# config

./: .Xresources  .gitconfig  .tmux.conf  .xprofile  PACKAGE_CATEGORIZATION.txt  README.md  RFC.md  todo.md
Thunar/: accels.scm  uca.xml
atuin/: config.toml
cava/: config  config.b
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  README-cursor.md  README-kb-rgb.md  README.md  TMUX_AUDIT.md  ZSH_TECHNICAL_AUDIT.md
dunst/: dunstrc
firefox/: userChrome.css  userContent.css
fontconfig/: TECHNICAL_AUDIT.md  fonts.conf  fonts.conf.co  test-config.sh
gtk-3.0/: bookmarks  settings.ini
gtk-4.0/: settings.ini
i3/: README.md  config
i3/scripts/i3-helper/: Cargo.toml  install.sh
i3/scripts/i3-helper/src/: main.rs
i3status-rust/: IMPROVEMENTS.md  README.md  config.toml
keyd/: default.conf
kitty/: gruvbox.conf  kitty.conf  kittys.conf  nordic.conf
mpd/: mpd.conf
newsboat/: README.md  config  urls
nvim/: init.lua
picom/: TECHNICAL_AUDIT.md  picom.conf
rmpc/: README.md  config.debug.ron  config.ron
setup-recovery/: README.md  TECHNICAL_AUDIT.md  boot-optimization.sh  bootstrap-yay.sh  download-piper-voice.sh  enable-services.sh  install-packages.sh  installed-packages.txt  restore-dotfiles.sh  secure-boot-setup.sh  setup-input-config.sh  setup-ly-greeter.sh  update-paths.sh
speech-dispatcher/: speechd.conf
sway/: config  config.b
vit/: config.ini
xorg.conf.d/: 30-touchpad.conf
zathura/: zathurarc
zsh/: .p10k.zsh  .zcompdump  .zshenv  .zshrc  aliases.zsh  conda.zsh  docker.zsh  drive.zsh  example.zsh  extract.zsh  github.zsh  kitty.zsh  rss.zsh  (+4 more)
(+81 files in other folders)
