[package]
name = "i3-helper"
version = "0.1.0"
edition = "2021"
description = "High-performance i3wm event daemon: auto-tiling + workspace naming"

[dependencies]
swayipc = "3"          # i3/sway IPC - well-maintained, protocol-compatible
anyhow = "1"           # Ergonomic error handling (no unwrap/expect)
signal-hook = "0.3"    # Safe POSIX signal handling
libc = "0.2"           # Zero-cost syscall for kill(2)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"